@@ -146,6 +146,10 @@ int log_error_cycle(server *srv) {
 			/* ok, new log is open, close the old one */
 			close(srv->errorlog_fd);
 			srv->errorlog_fd = new_fd;
+#ifdef FD_CLOEXEC
+			/* close fd on exec (cgi) */
+			fcntl(srv->errorlog_fd, F_SETFD, FD_CLOEXEC);
+#endif
 		}
 	}
 
